unpackaged/main/default/objects/PricebookEntry/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External_ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>