unpackaged/main/default/objects/PricebookEntry/fields/Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_External_ID__c</fullName>
    <formula>Product2.External_ID__c</formula>
    <label>Product External ID</label>
    <type>Text</type>
</CustomField>