unpackaged/main/default/objects/PricebookEntry/fields/Quantity_Break__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Break__c</fullName>
    <label>Quantity Break</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>