unpackaged/main/default/objects/PricebookEntry/fields/Quantity_Break_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Break_Formula__c</fullName>
    <formula>IF(
 NOT(
  OR(
   ISNULL(
    Quantity_Break__c 
   ),
   ISNULL(
    Quantity_Break_Price__c
   )  
  )
 ),
 TEXT(
  CurrencyIsoCode
 ) &amp; 
 &quot; &quot; &amp; 
 TEXT(
  FLOOR(
   Quantity_Break_Price__c
  ) 
 ) &amp; 
 &quot;.&quot; &amp; 
 LPAD(
  TEXT(
   (Quantity_Break_Price__c - FLOOR( Quantity_Break_Price__c ))*100 
  ), 2, &quot;0&quot;
 ) &amp; 
 &quot; (for quantities over &quot; &amp; 
 TEXT(
  Quantity_Break__c
 ) &amp; 
 &quot;)&quot;, &quot;&quot;
)</formula>
    <label>Quantity Break Price</label>
    <type>Text</type>
</CustomField>