unpackaged/main/default/objects/PricebookEntry/fields/Quantity_Break_Price__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Break_Price__c</fullName>
    <label>Quantity Break Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>