unpackaged/main/default/objects/PricebookEntry/fields/Search_Text__c.field-meta.xml
<CustomField>
    <fullName>Search_Text__c</fullName>
    <formula>Product2.Search_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Text</label>
    <type>Text</type>
</CustomField>